src/components/Button/Button.css
button {
  color: white;
  background-color: rgb(40, 40, 43);
  margin: 20px 10px;
  border-radius: 10px;
  padding: 20px;
  cursor: pointer;
  font-size: 20px;
}

button:hover {
  font-size: 25px;
}

.start-btn {
  display: block;
  width: 280px;
}

@media screen and (max-width: 700px) {
  button {
    margin: 5px 5px;
    padding: 15px;
    font-size: 10px;
  }

  .start-btn {
    margin-top: 20px;
    width: 120px;
  }
}

